Updated with CSS, !NOT FORMATTED TO NEW INDEX!

--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <center>
 <title>Dunder Mifflin - Login</title>
 <head>
+
   <!--Header image. It is the with of the page: 1000px-->
   <table width = "1000">
     <tr>
@@ -52,88 +53,34 @@
 
 
       </nav>
-      <body bgcolor = "bob">
 
-      <font face = "Arial"><table width = "1000" CELLSPACING=0
-		bgcolor = "#ffffff">
-        <tr height ="30">
-          <th>
+      <font face = "Arial"><body>
+        <br><br><br><br>
+        <table cellspacing="0" cellpadding="0" style="text-align:center;background-color:white;border-color:black;border-style:solid;border-width:1;box-shadow: 5px 10px;">
+        <tr>
+          <td width="300px" height="400px" >
 
+            <h1>LOGIN</h1>
+      <div class="container">
+          <form>
+            <input type="text" name="username" placeholder="Username" required style="width: 80%;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
+            <input type="password" name="password" placeholder="Password" required style="width: 80%;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
+            <input type="submit" value="LOGIN" style="background-color: #036ba8;color: white;padding: 14px 20px;margin: 8px 0;border: none;cursor: pointer;width: 80%;">
+          </form>
+      </div>
+            <br>Don't have an account?
+            <br><a href="register.html">REGISTER</a>
 
+          </td>
+          <td width="400px" height="400px" style="border-left: 5px solid black;">
 
-                  <font face = "Arial"><table width = "1000" CELLSPACING=0
-            		bgcolor = "#ffffff">
-                    <tr height ="30">
-                      <th>
+            <img align="center" width="100%" height="100%" src="Images/LoginImage.png" alt="DMPaper"/>
 
-
-                        <font face = "Arial"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
-                          <tr>
-                            <th width="100%">
-                                  <!-- PUT YOUR CODE HERE -->
-                                  <h2>LOGIN</h2>
-                            </th>
-                          </tr>
-                          <form>
-                            <tr>
-                              <th>
-                              <input type = "text" name = "user" placeholder = "Username" style="width: 180px; height: 30px;">
-                              <br>
-                              </th>
-                            </tr>
-
-                            <tr>
-                              <th>
-                                <br>
-                                <input type = "password" name = "pass" placeholder = "Password" style="width: 180px; height: 30px;">
-                              </th>
-                            </tr>
-
-                            <tr>
-                              <th>
-                                <input type="checkbox" id="Remember" name="Remember" value="RememberMe">
-                                <label for="Remember"><font size="-1">Remember Me</font></label><br>
-                              </th>
-                            <tr>
-
-                            <tr>
-                              <th>
-                                <br>
-                                <input type="submit" value="SUBMIT" style="width: 155px; height: 30px; background-color:#036ba8; color:#ffffff;" >
-                              </th>
-                            </tr>
-
-                            <tr>
-                              <th>
-                                <br>
-                                <font size="-1">Don't have an account?</font><br>
-                                <a href="register.html"><font size="-1">REGISTER</font></a>
-                              </th>
-                            </tr>
-
-
-                            <tr height="300px">
-                              <th>
-                              </th>
-                            </tr>
-
-                          </form>
-                        </table></font>
-
-
-
-                      </th>
-                    </tr>
-                  </table></font>
-
-
-
-
-          </th>
+          </td>
         </tr>
-      </table></font>
 
-      </body>
+      </table>
+    </body></font>
 
       <footer>
 
