--- a/register.html
+++ b/register.html
@@ -52,103 +52,40 @@
 
 
       </nav>
-      <body bgcolor = "bob">
+      <font face = "Arial"><body>
+        <br><br><br><br>
+        <table cellspacing="0" cellpadding="0" style="text-align:center;background-color:white;border-color:black;border-style:solid;border-width:1;box-shadow: 5px 10px;">
+        <tr>
+          <td width="600px" height="500px">
 
-      <font face = "Arial"><table width = "1000" CELLSPACING=0
-		bgcolor = "#ffffff">
-        <tr height ="30">
-          <th>
+            <h1>REGISTER</h1>
+      <div class="container">
+          <form>
+            <input type="text" name="FirstName" placeholder="First Name" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
+            <input type="text" name="LastName" placeholder="Last Name" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
 
+            <input type="text" name="user" placeholder="Username" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
+            <input type="text" name="email" placeholder="Email" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
 
+            <input type="password" name="Password" placeholder="Username" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
+            <input type="password" name="ConfPassword" placeholder="Username" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
 
-            <font face = "Arial"><table width = "1000" CELLSPACING=0
-            bgcolor = "#ffffff">
-              <tr height ="30">
-                <th>
+            <input type="checkbox" id="TOS" name="agree" value="TOS" required>
+            <label for="TOS"> I agree to the <a href="DMTOS.html">TERMS OF SERVICE</a></label><br><br>
 
+            <input type="submit" value="REGISTER" style="background-color: #036ba8;color: white;padding: 14px 20px;margin: 8px 0;border: none;cursor: pointer;width: 200px;">
 
-                  <font face = "Arial"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
-                    <tr>
-                      <th width="100%">
-                            <!-- PUT YOUR CODE HERE -->
-                            <h2>REGISTER</h2>
-                      </th>
-                    </tr>
-                    <form>
-                      <tr>
-                        <th>
-                        <input type = "text" name = "user" placeholder = "Username" style="width: 180px; height: 30px;">
-                        <br>
-                        </th>
-                      </tr>
+          </form>
+      </div>
+            <br>Already have an account?
+            <br><a href="Login.html">LOGIN</a>
 
-                      <tr>
-                        <th>
-                          <br>
-                          <input type = "password" name = "email" placeholder = "Email" style="width: 180px; height: 30px;">
-                        </th>
-                      </tr>
+          </td>
 
-                      <tr>
-                        <th>
-                          <br>
-                          <input type = "password" name = "pass" placeholder = "Password" style="width: 180px; height: 30px;">
-                        </th>
-                      </tr>
-
-                      <tr>
-                        <th>
-                          <br>
-                          <input type = "password" name = "passconfirm" placeholder = "Confirm Password" style="width: 180px; height: 30px;">
-                        </th>
-                      </tr>
-
-                      <tr>
-                        <th>
-                          <input type="checkbox" id="Agree" name="Agree" value="Agree">
-                          <label for="Agree"><font size="-1"> By creating an account, you must agree to Dunder Mifflin's<br>
-                            <a>TERMS OF SERVICE</a></font></label><br>
-                        </th>
-                      <tr>
-
-                      <tr>
-                        <th>
-                          <br>
-                          <input type="submit" value="REGISTER" style="width: 180px; height: 30px; background-color:#036ba8; color:#ffffff;">
-                        </th>
-                      </tr>
-
-                      <tr>
-                        <th>
-                          <br><font size="-1">
-                          Already have an account?<br>
-                          <a href="login.html">LOGIN</a>
-                        </font>
-                        </th>
-                      </tr>
-
-                      <tr height="300px">
-                        <th>
-                        </th>
-                      </tr>
-
-                    </form>
-                  </table></font>
-
-
-
-                </th>
-              </tr>
-            </table></font>
-
-
-
-
-          </th>
         </tr>
-      </table></font>
 
-      </body>
+      </table>
+    </body></font>
 
       <footer>
 
