Formatted to new index

--- a/DMTOS.html
+++ b/DMTOS.html
@@ -1,5 +1,55 @@
 <!DOCTYPE html>
-<html bgcolor ="bob">
-<title>Dunder Mifflin - FAQ</title>
-Term the service
+<html>
+<head>
+<title>Dunder Mifflin</title>
+
+<link href = "StyleSheet.css" rel = "stylesheet">
+
+</head>
+
+<body>
+<header class = "header">
+   <nav class = "nav">
+    	<ul class = "navUl">
+	   <li class = "logo"><a href="index.html"><img
+		src="Images/Dunder_Mifflin_logo.png" width="100"
+		height="40"></a>
+	   </li>
+	   <li class = "navLi"><a href="index.html"> HOME</a></li>
+	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
+	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
+	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
+
+   	</ul>
+   </nav>
+</header>
+
+<img src="Images/Header_Image.png" width="100%">
+
+<center>
+  <div style="width:1000px;height:500px;line-height:3em;overflow:scroll;padding:5px;background-color:#ffffff;color:#000000;scrollbar-base-color:#036ba8;">
+
+      <h2>TERMS OF SERVICE</h2>
+        Buy Paper.
+
+    </div>
+</center>
+
+
+
+</div>
+</body>
+
+
+<br></br>
+
+
+<footer class="footer">
+
+</footer>
+
+
+
+
+
 </html>
