--- a/paymentinfo.html
+++ b/paymentinfo.html
@@ -1,172 +1,150 @@
 <!DOCTYPE html>
-<html bgcolor ="bob">
-<center>
-<title>Dunder Mifflin - Payment and Shipping info</title>
+<html>
 <head>
-  <!--Header image. It is the with of the page: 1000px-->
-  <table width = "1000">
-    <tr>
-      <td></td>
-	<td rowspan = 2><img src = "Images/Header_Image.png" width ="1000">
-	</img></td>
-    </tr>
-    <tr>
-	<body link = "#00253B" alink = "#00253B" vlink = "#00253B">
-	<td colspan = "2" valign = "top" align = "right">
-	<font size = "4"><a href = "login.html">
-	LOG IN |</a><a href = "cart.html"><img width = "20"
-	height = "20" src = "Images/cart_icon.png"></a>
-	<!--Code for the Login section in the top right -->
-	</font></body></td>
-    </tr>
-  </table>
+<title>Dunder Mifflin</title>
+
+<link href = "StyleSheet.css" rel = "stylesheet">
+
 </head>
 
-<!--Header links-->
-<nav margin-top: 0>
-    <font face = "Arial"><table width = "1000" bgcolor = "#ffffff"
-	CELLSPACING=0> <tr height ="30">
-            <th width = "10%"><a href = "index.html"><b>HOME
-            </b></a></th>
-            <th width = "10%"><a href = "products.html"><b>PAPER
-            </b></a></th>
-            <th width = "10%"><a href = "about.html"><b>ABOUT
-            </b></a></th>
-            <th width = "10%"><a href = "FAQ.html"><b>FAQ
-            </b></a></th>
+<body>
+<header class = "header">
+   <nav class = "nav">
+    	<ul class = "navUl">
+	   <li class = "logo"><a href="index.html"><img
+		src="Images/Dunder_Mifflin_logo.png" width="100"
+		height="40"></a>
+	   </li>
+	   <li class = "navLi"><a href="index.html"> HOME</a></li>
+	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
+	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
+	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
 
-            <!---Spacer to put the search bar in a good spot--->
-            <th width = "30%"></th>
+   	</ul>
+   </nav>
+</header>
+
+<img src="Images/Header_Image.png" width="100%">
+
+<p>
+  <font face = "Arial"><body><center>
+    <br><br><br><br>
+    <table cellspacing="0" cellpadding="0" style="text-align:center;background-color:white;border-color:black;border-style:solid;border-width:1;box-shadow: 5px 10px;">
+    <tr>
+      <td width="600px" height="500px">
+
+        <h1>PAYMENT INFORMATION</h1>
+  <div class="container">
+      <form>
+          <h2>CARDHOLDER NAME</h2>
+        <input type="text" name="FirstName" placeholder="First Name" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
+        <input type="text" name="LastName" placeholder="Last Name" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
+
+          <h2>CARD INFORMATION</h2>
+        <input type="text" name="CardNum" placeholder="XXXX-XXXX-XXXX-XXXX" required style="width: 300px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
+        <input type="text" name="CVC" placeholder="CVC" required style="width: 100px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
+
+        <input type="text" name="EXPDATE" placeholder="Expiration Date" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
+        <input type="text" name="ZIP" placeholder="ZIP Code" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
+
+        <input type="submit" value="SUBMIT" style="background-color: #036ba8;color: white;padding: 14px 20px;margin: 8px 0;border: none;cursor: pointer;width: 200px;">
+
+      </form>
+  </div>
+      </td>
+      <td width="600px" height="500px" style="border-left: 5px solid black;">
+
+        <h1>SHIPPING INFORMATION</h1>
+  <div class="container">
+      <form>
+          <h2>RECIPIENT NAME</h2>
+        <input type="text" name="FirstName" placeholder="First Name" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
+        <input type="text" name="LastName" placeholder="Last Name" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
+
+          <h2>ADDRESS</h2>
+        <input type="text" name="StreetAddress" placeholder="Street Address" required style="width: 370px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;"><br>
+
+        <input type="text" name="City" placeholder="City" required style="width: 160px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">
+        <select required style="width: 150px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
+          <option value="" disabled selected>Select a State</option>
+          <option value="" disabled>------------------------</option>
+          <option value="AL">Alabama</option>
+          <option value="AK">Alaska</option>
+          <option value="AZ">Arizona</option>
+          <option value="AR">Arkansas</option>
+          <option value="CA">California</option>
+          <option value="CO">Colorado</option>
+          <option value="CT">Connecticut</option>
+          <option value="DE">Delaware</option>
+          <option value="DC">District Of Columbia</option>
+          <option value="FL">Florida</option>
+          <option value="GA">Georgia</option>
+          <option value="HI">Hawaii</option>
+          <option value="ID">Idaho</option>
+          <option value="IL">Illinois</option>
+          <option value="IN">Indiana</option>
+          <option value="IA">Iowa</option>
+          <option value="KS">Kansas</option>
+          <option value="KY">Kentucky</option>
+          <option value="LA">Louisiana</option>
+          <option value="ME">Maine</option>
+          <option value="MD">Maryland</option>
+          <option value="MA">Massachusetts</option>
+          <option value="MI">Michigan</option>
+          <option value="MN">Minnesota</option>
+          <option value="MS">Mississippi</option>
+          <option value="MO">Missouri</option>
+          <option value="MT">Montana</option>
+          <option value="NE">Nebraska</option>
+          <option value="NV">Nevada</option>
+          <option value="NH">New Hampshire</option>
+          <option value="NJ">New Jersey</option>
+          <option value="NM">New Mexico</option>
+          <option value="NY">New York</option>
+          <option value="NC">North Carolina</option>
+          <option value="ND">North Dakota</option>
+          <option value="OH">Ohio</option>
+          <option value="OK">Oklahoma</option>
+          <option value="OR">Oregon</option>
+          <option value="PA">Pennsylvania</option>
+          <option value="RI">Rhode Island</option>
+          <option value="SC">South Carolina</option>
+          <option value="SD">South Dakota</option>
+          <option value="TN">Tennessee</option>
+          <option value="TX">Texas</option>
+          <option value="UT">Utah</option>
+          <option value="VT">Vermont</option>
+          <option value="VA">Virginia</option>
+          <option value="WA">Washington</option>
+          <option value="WV">West Virginia</option>
+          <option value="WI">Wisconsin</option>
+          <option value="WY">Wyoming</option>
+        </select>
+
+        <input type="text" name="ZIP" placeholder="ZIP" required style="width: 50px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;"><br>
+        <input type="submit" value="SUBMIT" style="background-color: #036ba8;color: white;padding: 14px 20px;margin: 8px 0;border: none;cursor: pointer;width: 200px;">
+
+      </form>
+  </div>
+      </td>
+
+    </tr>
+
+  </table>
+  </center></body></font>
+</p>
+</body>
 
 
-            <th width = "50%">
-                <form><b>
-            <img src = "Images/search_icon.png" width ="15">
-            <input type = "text" name = "search"
-		placeholder = "Search" minlength = "1" height ="15">
-                </b></form>
-            </th>
-        </tr>
-
-      </table></font>
+<br></br>
 
 
-      </nav>
-      <font face = "Arial"><body>
-        <br><br><br><br>
-        <table cellspacing="0" cellpadding="0" style="text-align:center;background-color:white;border-color:black;border-style:solid;border-width:1;box-shadow: 5px 10px;">
-        <tr>
-          <td width="600px" height="500px">
+<footer class="footer">
 
-            <h1>PAYMENT INFORMATION</h1>
-      <div class="container">
-          <form>
-              <h2>CARDHOLDER NAME</h2>
-            <input type="text" name="FirstName" placeholder="First Name" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
-            <input type="text" name="LastName" placeholder="Last Name" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
+</footer>
 
-              <h2>CARD INFORMATION</h2>
-            <input type="text" name="CardNum" placeholder="XXXX-XXXX-XXXX-XXXX" required style="width: 300px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
-            <input type="text" name="CVC" placeholder="CVC" required style="width: 100px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
 
-            <input type="text" name="EXPDATE" placeholder="Expiration Date" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
-            <input type="text" name="ZIP" placeholder="ZIP Code" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
 
-            <input type="submit" value="SUBMIT" style="background-color: #036ba8;color: white;padding: 14px 20px;margin: 8px 0;border: none;cursor: pointer;width: 200px;">
 
-          </form>
-      </div>
-          </td>
-          <td width="600px" height="500px" style="border-left: 5px solid black;">
 
-            <h1>SHIPPING INFORMATION</h1>
-      <div class="container">
-          <form>
-              <h2>RECIPIENT NAME</h2>
-            <input type="text" name="FirstName" placeholder="First Name" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
-            <input type="text" name="LastName" placeholder="Last Name" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
-
-              <h2>ADDRESS</h2>
-            <input type="text" name="StreetAddress" placeholder="Street Address" required style="width: 370px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;"><br>
-
-            <input type="text" name="City" placeholder="City" required style="width: 160px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">
-            <select required style="width: 150px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
-              <option value="" disabled selected>Select a State</option>
-              <option value="" disabled>------------------------</option>
-              <option value="AL">Alabama</option>
-            	<option value="AK">Alaska</option>
-            	<option value="AZ">Arizona</option>
-            	<option value="AR">Arkansas</option>
-            	<option value="CA">California</option>
-            	<option value="CO">Colorado</option>
-            	<option value="CT">Connecticut</option>
-            	<option value="DE">Delaware</option>
-            	<option value="DC">District Of Columbia</option>
-            	<option value="FL">Florida</option>
-            	<option value="GA">Georgia</option>
-            	<option value="HI">Hawaii</option>
-            	<option value="ID">Idaho</option>
-            	<option value="IL">Illinois</option>
-            	<option value="IN">Indiana</option>
-            	<option value="IA">Iowa</option>
-            	<option value="KS">Kansas</option>
-            	<option value="KY">Kentucky</option>
-            	<option value="LA">Louisiana</option>
-            	<option value="ME">Maine</option>
-            	<option value="MD">Maryland</option>
-            	<option value="MA">Massachusetts</option>
-            	<option value="MI">Michigan</option>
-            	<option value="MN">Minnesota</option>
-            	<option value="MS">Mississippi</option>
-            	<option value="MO">Missouri</option>
-            	<option value="MT">Montana</option>
-            	<option value="NE">Nebraska</option>
-            	<option value="NV">Nevada</option>
-            	<option value="NH">New Hampshire</option>
-            	<option value="NJ">New Jersey</option>
-            	<option value="NM">New Mexico</option>
-            	<option value="NY">New York</option>
-            	<option value="NC">North Carolina</option>
-            	<option value="ND">North Dakota</option>
-            	<option value="OH">Ohio</option>
-            	<option value="OK">Oklahoma</option>
-            	<option value="OR">Oregon</option>
-            	<option value="PA">Pennsylvania</option>
-            	<option value="RI">Rhode Island</option>
-            	<option value="SC">South Carolina</option>
-            	<option value="SD">South Dakota</option>
-            	<option value="TN">Tennessee</option>
-            	<option value="TX">Texas</option>
-            	<option value="UT">Utah</option>
-            	<option value="VT">Vermont</option>
-            	<option value="VA">Virginia</option>
-            	<option value="WA">Washington</option>
-            	<option value="WV">West Virginia</option>
-            	<option value="WI">Wisconsin</option>
-            	<option value="WY">Wyoming</option>
-            </select>
-
-            <input type="text" name="ZIP" placeholder="ZIP" required style="width: 50px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;"><br>
-            <input type="submit" value="SUBMIT" style="background-color: #036ba8;color: white;padding: 14px 20px;margin: 8px 0;border: none;cursor: pointer;width: 200px;">
-
-          </form>
-      </div>
-          </td>
-
-        </tr>
-
-      </table>
-    </body></font>
-
-      <footer>
-
-      <table width ="1000px" height = "750px" height ="500px"
-	bgcolor = "#036ba8">
-        <tr>
-          <th>  <!-- Code -->
-          </th>
-        </tr>
-      </table>
-      </footer>
-</center>
 </html>
