--- a/products.html
+++ b/products.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <center>
   <title>Dunder Mifflin - Products</title>
   <head>
     <link href = "StyleSheet.css" rel = "stylesheet">
@@ -10,6 +9,7 @@
       color:white;
       }
       .product-selection {
+        text-align: center; 
         background-color: lightgray;
         grid-row-start: 1;
         grid-row-end: -1;
@@ -17,12 +17,14 @@
         grid-column-end: col1;
       }
       .product-image {
+        text-align: center;
         grid-row-start: r0;
         grid-row-end: r1;
 
       }
       
       .product-desc {
+        text-align: center;
         margin:20px;
         background-color: whitesmoke;
         grid-row-start: r1;
@@ -51,20 +53,20 @@
   <!--Navigation links-->
   <body>
     <header class = "header">
-      <nav class = "nav">
-         <ul class = "navUl">
-        <li class = "logo"><a href="index.html"><img 
-       src="Images/Dunder_Mifflin_logo.png" width="100" 
-       height="40"></a>
-        </li>
-        <li class = "navLi"><a href="index.html"> HOME</a></li>
-        <li class = "navLi"><a href="products.html"> PAPER</a></li>
-        <li class = "navLi"><a href="about.html"> ABOUT</a></li>
-        <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
-   
-        </ul>
-      </nav>
-   </header>
+   <nav class = "nav">
+    	<ul class = "navUl">
+	   <li class = "logo"><a href="index.html"><img 
+		src="Images/Dunder_Mifflin_logo.png" width="100" 
+		height="40"></a>
+	   </li>
+	   <li class = "navLi"><a href="index.html"> HOME</a></li>
+	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
+	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
+	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
+
+   	</ul>
+   </nav>
+</header>
       <font face = "Arial">
         <table>
           <tr height="30">
@@ -79,7 +81,7 @@
           </div>
           <div class = "grid-product">
             <div class = "product-image">
-              <a href = "paperOrange.html"><img width = "200" height = "200" src = "Images/PaperCASE.png"></a>
+            <a href = "paperOrange.html"><img width = "200" height = "200" src = "Images/PaperCASE.png"></a>
             </div>
             <div class = "product-desc">
               <br>Product Description 1
