search, cart, and login added

--- a/index.html
+++ b/index.html
@@ -19,15 +19,23 @@
 	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
 	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
 	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
-
-   	</ul>
+	   <ul class = "navRight">
+	   <li class = "navLi"><form><input type = "search"
+		placeholder = "Search"></form></li>
+	   <li class = "navLi"><a href = "cart.html"> <img width = "20" 
+		height = "20" src = "Images/cart_icon.png"></a></li>
+	   <li class = "navLi"><a href = "login.html">LOG IN</a></li>
+	   </ul>
+  	</ul>
    </nav>
 </header>
 
 <img src="Images/Header_Image.png" width="100%">
 
 <p>
-	<br><br><br><br><br><br><br><br>
+	
+<form><input type = "search" placeholder = "Search"></form>
+<br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br>
