Fixed Search bar CSS

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <header class = "header">
    <nav class = "nav">
     	<ul class = "navUl">
-	   <li class = "logo"><a href="index.html"><img 
-		src="Images/Dunder_Mifflin_logo.png" width="100" 
+	   <li class = "logo"><a href="index.html"><img
+		src="Images/Dunder_Mifflin_logo.png" width="100"
 		height="40"></a>
 	   </li>
 	   <li class = "navLi"><a href="index.html"> HOME</a></li>
@@ -20,9 +20,11 @@
 	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
 	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
 	   <ul class = "navRight">
+
 	   <li class = "navLi"><form><input type = "search"
-		placeholder = "Search"></form></li>
-	   <li class = "navLi"><a href = "cart.html"> <img width = "20" 
+		placeholder = "Search" style="width: 300px;padding: 12px 20px;margin: 10px 0;display:inline-block;border: 1px solid #ccc;box-sizing: border-box;"></form></li>
+
+	   <li class = "navLi"><a href = "cart.html"> <img width = "20"
 		height = "20" src = "Images/cart_icon.png"></a></li>
 	   <li class = "navLi"><a href = "login.html">LOG IN</a></li>
 	   </ul>
@@ -33,8 +35,7 @@
 <img src="Images/Header_Image.png" width="100%">
 
 <p>
-	
-<form><input type = "search" placeholder = "Search"></form>
+
 <br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br>
