nav dots removed

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
 	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
 	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
-	   <ul class = "navRight">
-
+	   <ul class = "navRight" style = "list-style: none;">
 	   <li class = "navLi"><form><input type = "search"
-		placeholder = "Search" style="width: 300px;padding: 12px 20px;margin: 10px 0;display:inline-block;border: 1px solid #ccc;box-sizing: border-box;"></form></li>
+		placeholder = "Search" style="width: 300px;padding: 12px 			20px;margin: 10px 0;display:inline-block;border: 1px solid
+		#ccc;box-sizing: border-box;"></form></li>
 
 	   <li class = "navLi"><a href = "cart.html"> <img width = "20"
 		height = "20" src = "Images/cart_icon.png"></a></li>
