updated products page with sort bar

--- a/paper.html
+++ b/paper.html
@@ -67,14 +67,8 @@
 
 
   </body>
-  <footer>
-    <table width ="1000px" height = "750px" height ="500px"
-    bgcolor = "#036ba8">
-      <tr>
-        <th>  <!-- Code -->
-        </th>
-      </tr>
-    </table>
+  <footer class="footer">
+
   </footer>
-  </center>
+  
 </html>
