search bar adjust

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
 	   <ul class = "navRight" style = "list-style: none;">
 	   <li class = "navLi"><form><input type = "search"
-		placeholder = "Search" style="width: 300px;padding: 12px 			20px;margin: 10px 0;display:inline-block;border: 1px solid
+		placeholder = "Search" style="width: 300px;padding: 9px
+		20px;margin: 10px 0;display:inline-block;border: 1px solid
 		#ccc;box-sizing: border-box;"></form></li>
 
 	   <li class = "navLi"><a href = "cart.html"> <img width = "20"
